# horriblerenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  horrible_bench.cc
glfw3webgpu/: CMakeLists.txt  glfw3webgpu.c  glfw3webgpu.h
include/horriblerenderer/: HorribleWindow.hpp
include/utils/: containers.hpp  utils.hpp
src/: CMakeLists.txt  main.cc
src/horriblerenderer/: HorribleWindow.cc
src/utils/: utils.cc
tests/: CMakeLists.txt  horrible_window_test.cc
utils/horrible/: __init__.py
utils/horrible/functions/: __init__.py  softmax.py
webgpu/: CMakeLists.txt  webgpu.cmake
